# pythonsh

./: .gitignore  Pipfile  README.md  project.toml  py.sh  pyproject.toml  pytest.ini  python.paths  python.sh  pythonsh.toml  setup.cfg  zshrc.custom
docker/: Dockerfile  Makefile  docker-python.org  docker.org  install-module-tools.sh  mkdocker.sh  replace-version.sh
docs/: Makefile  bibliography.bib  pythonsh.org
emacs/: emacs.desktop
python-deps/: linux.sh
pythonsh/: Pipfile  prompt.sh  pysh-install.sh  python.sh  zshrc.custom  zshrc.prompt  zshrc.rc
pyutils/: catpip.py  mkfat.py  mkset.py
releases/: Pipfile-0.12.0  Pipfile-0.16.0  Pipfile-0.8.0  Pipfile-0.8.2  Pipfile-0.9.1  Pipfile-0.9.5  Pipfile.lock-0.11.1  Pipfile.lock-0.12.0  Pipfile.lock-0.16.0  Pipfile.lock-0.16.1  Pipfile.lock-0.16.3  Pipfile.lock-0.17.0  Pipfile.lock-0.17.1  Pipfile.lock-0.8.3  Pipfile.lock-0.8.4  Pipfile.lock-0.9.3  Pipfile.lock-0.9.4  Pipfile.lock-0.9.6  Pipfile.lock-0.9.7  Pipfile.lock-1.0.0  Pipfile.lock-1.1.0  Pipfile.lock-1.2.0  Pipfile.lock-1.2.1  docker-11.tar  docker-3.tar  docker-4.tar  docker-5.tar  docker-6.tar  docker-7.tar  docker-9.tar  python.sh-0.15.0  python.sh-0.15.1  python.sh-0.16.0  python.sh-0.16.1  python.sh-0.16.2  python.sh-0.16.3  python.sh-0.17.0  python.sh-0.17.1  python.sh-1.0.0  python.sh-1.1.0  (+2 more)
scripts/: install-docker-ubuntu.sh  virtualenv-runner.sh
test/: test.pypi
tests/: test_python_versions.py
tests/clutchdb/: Pipfile
tests/pastepipe/: Pipfile
