[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonsh"
version = "0.8.0"

license = { file = "LICENSE" }

readme = "README.md"

description = "python development tools"
authors = [ { name = "Michael Mattie" , email = "codermattie@runbox.com" } ]

dependencies = ['toml','versions']

[project.urls]
homepage = "https://github.com/bitcathedrals/pythonsh/"
repository = "https://github.com/bitcathedrals/pythonsh.git"

[project.scripts]
catpip = "pyutils.catpip.py:exec"


