[build-systeml]
build-backend = "setuptools.build_meta"
requires = ["build","ptpython","pytest","pytest-ordering","pytest-dependency","pipenv","pip"]
[tool.setuptools.packages.find]
where = ["pyutils"]
[project]
name = "pythonsh"
version = "0.10.0"
readme = "README.md"
dependencies = ["toml","version-parser"]
[project.scripts]
catpip = "pyutils.catpip.py:pipfile"
catproject = "pyutils.catpip:pyproject"
